install wizard add config set step;config add auto detect set